--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
         <h1>Enabling students to better understand anatomy </h1>
         <h3>Through our Virtual Reality solutions  </h3>
         <p> Medical students consider anatomy as one of the most difficult studies to wrap their heads around. By providing anatomy classes in virtual reality, we support students in mastering their understanding of human anatomy.</p>
-        <%= link_to "Request a demo", subscribe_path, class: "btn-brand btn-start" %>
+        <%= link_to "Request a demo", contact_path, class: "btn-brand btn-start" %>
       </div>
       <div class="col-sm-4 col-lg-4 col-12 topbanner">
         <%= image_tag "homepage1.png", class: "image-1" %>
@@ -39,11 +39,11 @@
       <div class="row">
         <div class="col-sm-8 col-lg-8 col-12">
           <h1> Educating Next Generation’s Medical Specialists </h1>
-          <h5> It’s a Puzzle. We help putting the pieces together </h5>
+          <h5> It’s a Puzzle. We help putting the pieces together. </h5>
           <p> The Virtual Reality programs we develop are custom-built in order to satisfy the didactical needs and requirements of universities and hospitals. The VR Classes range from general anatomy to tailor-made training for medical specialists. MedicalVR assembles classes based on the desired curriculum in order to adapt to your precise learnings needs. </p>
           <div>
-          <%= link_to "Develop VR", subscribe_path, class: "btn-brand" %>
-          <%= link_to "Educate Your Students", subscribe_path, class: "btn-explore" %>
+          <%= link_to "Develop VR", contact_path, class: "btn-brand" %>
+          <%= link_to "Educate Your Students", contact_path, class: "btn-explore" %>
           </div>
         </div>
         <div class="col-sm-4 col-lg-4 col-12 topbanner">
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div>
-      <%= link_to "Request a demo", subscribe_path, class: "btn-brand btn-end" %>
+      <%= link_to "Request a demo", contact_path, class: "btn-brand btn-end" %>
     </div>
       <div>
         <br>
