--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -52,18 +52,40 @@
   filter: brightness(92%);
 }
 
-@media (max-width: 800px) {
-  .btn-explore {
-  margin-top: 10px;
-  display: flex;
-  }
+@media (max-width: 812px) {
+  // .btn-explore {
+  // margin-top: 10px;
+  // display: flex;
+  // width: fit-content;
+  // }
+
   .btn-start {
     margin-bottom: 40px;
     margin-left: 40px;
     font-size: 20px;
+    width: fit-content;
+
   }
   .btn-end {
   padding: 5px 50px;
   font-size: 18px;
   }
 }
+
+@media (min-width: 300px) and (max-width: 1024px) and (orientation: portrait) {
+  .btn-explore {
+    margin-top: 10px;
+    display: flex;
+    width: fit-content;
+  }
+}
+
+
+@media (min-width: 300px) and (max-width: 1024px) and (orientation: landscape) {
+  .btn-explore {
+    margin-top: 10px;
+    display: flex;
+    width: fit-content;
+  }
+}
+
