--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <% end %>
 
   <div class="d-none d-sm-block">
-  <%= link_to "Contact", subscribe_path, class: "btn btn-link" %>
+  <%= link_to "Contact", contact_path, class: "btn btn-link" %>
 </div>
 </div>
 </div>
