--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -1,3 +1,7 @@
+.contact-row {
+  margin-top: 20px;
+}
+
 .fullbox {
   background-color: #F4F4F4;
   font-size: 24px;
@@ -6,29 +10,35 @@
 
 .contactform {
   background-color: #F4F4F4;
-  padding: 10px 0px;
+  margin-top: 10px;
   color: #EB4F34;
   font-family: Montserrat;
   font-size: 16px;
   height: 100px;
 }
 
-.plussize {
-  height: 100px;
-}
+// .plussize {
+//   width: 100px;
+// }
 
+.field {
+  width: 100%;
+  padding: 0.625em;
+  border: 1px solid #EB4F34;
+}
 
 .sendbtn{
   font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 32px;
+  // font-style: normal;
+  // font-size: 18px;
+  // line-height: 32px;
   text-align: center;
-  color: white;
+  margin-top: 50px;
+  // color: white;
   // background-color: #EB4F34;
-  border-radius: 5px;
-  padding: 3px 2pc;
-  border: 0;
+  // border-radius: 5px;
+  // padding: 3px 2pc;
+  // border: 0;
 }
 
 .btn-brand:hover{
