--- a/app/assets/stylesheets/components/_secondlanding.scss
+++ b/app/assets/stylesheets/components/_secondlanding.scss
@@ -3,7 +3,7 @@
   padding-top: 100px;
   padding-bottom: 100px;
 
-  h1{
+  h1 {
     font-weight: bold;
     font-size: 48px;
   }
@@ -30,13 +30,6 @@
   }
 }
 
-@media (max-width: 800px) {
-  .sectionsecond
-  h1 {
-    font-size: 27px;
-  }
-}
-
 .sectionthree {
   display: flex;
   justify-content: center;
@@ -47,7 +40,7 @@
   h1 {
     font-weight: bold;
     font-size: 54px;
-
+  }
   p {
   margin-bottom: 30px;
   line-height: 30px;
@@ -69,86 +62,41 @@
 
   h2 {
     font-weight: bold;
-     color: #EB4F34;
+     // color: #EB4F34;
     margin-top: 12px;
-
   }
 }
 
-.item-illustration-img{
-  width: 83%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
+.fas {
+  color: #EB4F34;
 }
 
-.item-illustration-img-2{
-  width: 37%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
-}
-.item-illustration-img-3{
-  max-width: 50%;
-  max-height: 50%;
-  margin-bottom: 28px;
-  margin-top: 30px;
+.fab {
+  color: #EB4F34;
 }
 
-@media (max-width: 812px) {
-.sectionsecond {
-  margin-bottom: 40px;
-  margin-left: 40px;
-}
-}
-
-
-@media (min-width: 320px) and (max-width: 480px) and (orientation: portrait) {
-  .item-illustration-img-2{
-  width: 45%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
-}
- .item-illustration-img-3{
-   margin-bottom: 30px;
-}
-}
-
-@media (min-width: 320px) and (max-width: 480px) and (orientation: landscape) {
-  .item-illustration-img-2{
-  width: 45%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
-}
- .item-illustration-img-3{
-   margin-bottom: 30px;
-}
-}
-
-@media (min-width: 667px) and (max-width: 1024px) and (orientation: portrait) {
-  .item-illustration-img-2{
-  width: 45%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
-}
- .item-illustration-img-3{
-   margin-bottom: 30px;
-}
-}
-
-@media (min-width: 667px) and (max-width: 1024px) and (orientation: landscape) {
-  .item-illustration-img-2{
-  width: 71%;
-  height: 154px;
-  margin-bottom: 20px;
-  margin-top: 12px;
+@media (max-width: 767px) {
+  .sectionsecond {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  h1 {
+    font-size: 24px;
   }
- .item-illustration-img-3{
-   margin-bottom: 92px;
+  h5 {
+    font-size: 14px;
   }
 }
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  .sectionsecond {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  h1 {
+    font-size: 24px;
+  }
+  h5 {
+    font-size: 14px;
+  }
+}
+}
