--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #F4F4F4;
+  padding: 0px;
+  padding-top: 10px;
 
   .btn {
     color: #373D55;
