--- a/app/assets/stylesheets/components/_contact.scss
+++ b/app/assets/stylesheets/components/_contact.scss
@@ -17,14 +17,11 @@
   height: 100px;
 }
 
-// .plussize {
-//   width: 100px;
-// }
-
 .field {
   width: 100%;
   padding: 0.625em;
   border: 1px solid #EB4F34;
+  border-radius: 3px;
 }
 
 .sendbtn{
