--- a/app/assets/stylesheets/components/_landings.scss
+++ b/app/assets/stylesheets/components/_landings.scss
@@ -1,6 +1,14 @@
-.image-container {
+  .image-container {
   display: flex;
+}
 
+@media (max-width: 767px) {
+  .image-container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
 }
 
 .image-1 {
@@ -43,17 +51,26 @@
   }
 }
 
-@media (max-width: 800px) {
-    .first {
-      margin-bottom: 40px;
-      margin-top: 10px;
+@media (max-width: 767px) {
+  .first {
+    margin-bottom: 40px;
+    margin-top: 10px;
     h1{
       font-size: 24px;
     }
     h3{
-      font-size: 15px;
+      font-size: 18px;
     }
-}
+  }
+
+  .topbanner {
+    order: -1;
+    margin-bottom: 20px;
+  }
+  .topbanner-2 {
+   order: -1;
+   margin-bottom: 20px;
+ }
 }
 
 .red-text {
@@ -67,38 +84,55 @@
   align-text: center;
   text-align: center;
   h2 {
-  font-weight: bold;
-  font-size: 39px;
+    font-weight: bold;
+    font-size: 39px;
   }
 
   p {
-  margin-bottom: 30px;
-  line-height: 30px;
-  font-size: 18px;
-  }
-
-@media (max-width: 800px) {
-  .row-1
-  h1 {
-  font-size: 24px;
-  }
-  h2 {
-    font-size: 28px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    font-size: 18px;
   }
 }
+
+@media (max-width: 767px) {
+  .row-1 {
+    h1 {
+      font-size: 24px;
+    }
+    h2 {
+      font-size: 24px;
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .first {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    h1 {
+      font-size: 32px;
+    }
+  }
+  .row-1 {
+    h2 {
+      margin-top: 25px;
+      font-size: 26px;
+    }
+  }
+
 }
 
 .container-text {
   display: flex;
   justify-content: center;
-  align-items: left;
   margin-top: 20px;
   margin-bottom: 50px;
 
   p {
-  margin-bottom: 30px;
-  line-height: 30px;
-  font-size: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    font-size: 18px;
   }
 }
 
@@ -128,29 +162,18 @@
 //   }
 // }
 
-@media (max-width: 767px) {
-  .topbanner {
-  order: -1;
-  margin-bottom: 20px;
-  }
-.topbanner-2 {
-   order: -1;
-   margin-bottom: 20px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .topbanner {
-  order: -1;
-  margin-left: 92px;
-  margin-bottom: 20px;
-}
-.topbanner-2 {
-   order: -1;
-  margin-left: 40px;
-  margin-bottom: 20px;
-  }
-}
+// @media (min-width: 767px) and (max-width: 1024px) {
+//   .topbanner {
+//     order: -1;
+//     margin-left: 92px;
+//     margin-bottom: 20px;
+//   }
+//   .topbanner-2 {
+//    order: -1;
+//    margin-left: 40px;
+//    margin-bottom: 20px;
+//  }
+// }
 
 
 
