--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -36,7 +36,7 @@
         <div class="response" id="mce-success-response" style="display:none"></div>
       </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_82ff8df0fba3c358b635eece3_ddae197350" tabindex="-1" value=""></div>
-      <div class="sendbtn"><input type="submit" value="Send Message" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      <div class="sendbtn"><input type="submit" value="Send Message" name="subscribe" id="mc-embedded-subscribe" class="button sendbtn"></div>
     </div>
 
   </form>
