--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="text-center footerfixed">
+<!-- <div class="text-center footerfixed">
   <ul class="list-inline">
     <li> <strong> MedicalVR 2019 </strong> </li>
   </ul>
-</div>
+</div> -->
